# routes/auth.js
@@ -1,9 +1,0 @@
-const express = require('express');
-const authController = require('../controllers/auth');
-
-const router = express.Router();
-
-router.post('/register', authController.register);
-router.post('/login', authController.login);
-
-module.exports = router;
