# routes/events.js
@@ -2,16 +2,15 @@ const express = require('express');
 const router = express.Router();
 
 const eventControllers = require('../controllers/events');
-const { requireAuth } = require('../middleware/auth');
 
 router.get('/', eventControllers.getAll);
 
 router.get('/:id', eventControllers.getSingle);
 
-router.post('/', requireAuth, eventControllers.createEvents);
+router.post('/', eventControllers.createEvents);
 
-router.put('/:id', requireAuth, eventControllers.updateEvents);
+router.put('/:id', eventControllers.updateEvents);
 
-router.delete('/:id', requireAuth, eventControllers.deleteEvents);
+router.delete('/:id', eventControllers.deleteEvents);
 
 module.exports = router;
